--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 fastapi[all]
+uvicorn==0.21.1
+pydantic==1.10.9
+opencv-python-headless==4.8.0.76
+numpy==1.23.5
+tensorflow==2.10.0
+ultralytics==8.0.74
+pymongo==4.5.0
+gridfs==4.5.0
+face-recognition==1.3.0
